[project]
name = "lwmr-experiments"
version = "0.1.0"
description = "Legged-Wheeled Mobile Robot"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "copier>=9.15.0",
    "gymnasium>=1.3.0",
    "lwmr",
    "newton[examples,notebook,torch-cu12]>=1.1.0",
    "viser>=1.0.27",
]

[tool.uv.workspace]
members = [
    "packages/lwmr",
]

[tool.uv.sources]
lwmr = { workspace = true, editable = true }

[tool.ruff]
line-length = 110
