[project]
name = "lwmr-experiments"
version = "0.1.0"
description = "Legged-Wheeled Mobile Robot"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium>=1.3.0",
    "jupyterlab>=4.5.7",
    "lwmr",
    "matplotlib>=3.10.9",
    "newton[examples,notebook,torch-cu12]>=1.2.0",
    "pandas>=3.0.3",
    "torchrl>=0.12.0",
    "tyro>=1.0.13",
]

[tool.uv.workspace]
members = [
    "packages/lwmr",
]

[tool.uv.sources]
lwmr = { workspace = true, editable = true }

[tool.ruff]
line-length = 110
