[project]
name = "lwmr-experiments"
version = "0.1.0"
description = "Legged-Wheeled Mobile Robot"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium>=1.3.0",
    "jupyterlab>=4.5.7",
    "lwmr",
    "matplotlib>=3.10.9",
    "nbsphinx>=0.9.8",
    "newton[examples,notebook,torch-cu12]>=1.2.0",
    "pandas>=3.0.3",
    "sb3-contrib",
    "setuptools==65.5.0",
    "tensorboard>=2.20.0",
    "torchrl>=0.12.0",
    "tyro>=1.0.13",
]

[tool.uv.workspace]
members = [
    "packages/lwmr",
]

[tool.uv.sources]
lwmr = { workspace = true, editable = true }
sb3-contrib = { git = "https://github.com/Stable-Baselines-Team/stable-baselines3-contrib", rev = "feat/gymnasium-support" }

[tool.ruff]
line-length = 110
extend-select = ["I"]
